--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "python-template"
+name = "ami"
 version = "0.1.0" # After updated your version, you have to run `poetry install` again.
 description = "Your project description."
 authors = ["Python Template <python.template@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 
 
 [tool.poetry.group.dev.dependencies]
