--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.11"
 pre-commit = "^3.5.0"
 pytest = "^7.4.3"
 pytest-slow = "^0.0.3"
+pytest-mock = "^3.12.0"
 
 [build-system]
 requires = ["poetry-core"]
