--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 torch = "^2.1.2"
+numpy = "^1.26.2"
 
 
 [tool.poetry.group.dev.dependencies]
