fix to mypy strict mode

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -91,4 +91,4 @@ repos:
     rev: "v1.7.0"
     hooks:
       - id: mypy
-        args: [--ignore-missing-imports, --python-version=3.11]
+        args: [--config-file=mypy.ini]
