--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -91,4 +91,5 @@ repos:
     rev: "v1.7.0"
     hooks:
       - id: mypy
-        args: [--config-file=mypy.ini]
+        args: [--config-file=pyproject.toml]
+        additional_dependencies: [pytest]
