--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,3 +46,13 @@ exclude_lines = [
     "raise NotImplementedError()",
     "if __name__ == .__main__.:",
 ]
+
+[tool.mypy]
+strict = true
+ignore_missing_imports = true
+python_version = "3.11"
+implicit_reexport = true
+
+[[tool.mypy.overrides]]
+module = "tests.*"
+ignore_errors = true
