--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pre-commit = "^3.5.0"
 pytest = "^7.4.3"
 pytest-slow = "^0.0.3"
 pytest-mock = "^3.12.0"
+mypy = "^1.8.0"
 
 [build-system]
 requires = ["poetry-core"]
