--- a/samples/logging.yaml
+++ b/samples/logging.yaml
@@ -1,5 +1,6 @@
 root:
   handlers: [root_console, root_file]
+  level: NOTSET
 
 loggers:
   main:
@@ -13,39 +14,34 @@ handlers:
   root_console:
     class: logging.StreamHandler
     stream: ext://sys.stdout
-    level: DEBUG
     formatter: simple
 
   root_file:
-    class: logging.handlers.TimeRotatingFileHandler
+    class: logging.handlers.TimedRotatingFileHandler
     filename: logs/root/root.log
     when: D
-    level: DEBUG
     formatter: simple
 
   main_file:
-    class: logging.handlers.TimeRotatingFileHandler
+    class: logging.handlers.TimedRotatingFileHandler
     filename: logs/main/main.log
     when: D
-    level: DEBUG
     formatter: simple
 
   training_file:
-    class: logging.handlers.TimeRotatingFileHandler
+    class: logging.handlers.TimedRotatingFileHandler
     filename: logs/training/training.log
     when: D
-    level: DEBUG
     formatter: simple
 
   inference_file:
-    class: logging.handlers.TimeRotatingFileHandler
+    class: logging.handlers.TimedRotatingFileHandler
     filename: logs/inference/inference.log
     when: D
-    level: DEBUG
     formatter: simple
 
 formatters:
   simple:
-    format: "%(asctime)s %(levelname).4s %(name).16s | %(message)s"
+    format: "%(asctime)s %(levelname).4s %(name)-.16s | %(message)s"
 
 version: 1
