logging_demoの出力先を`logs/logging_demo`のみに変更

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 torch = "^2.1.2"
 numpy = "^1.26.2"
+rootutils = "^1.0.7"
 
 
 [tool.poetry.group.dev.dependencies]
