--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 torch = "^2.1.2"
 numpy = "^1.26.2"
+torchvision = "^0.17.0"
 
 
 [tool.poetry.group.dev.dependencies]
