メインスレッドを仮実装
BottleでWeb APIを実装

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 torch = "^2.1.2"
 numpy = "^1.26.2"
 rootutils = "^1.0.7"
+bottle = "^0.12.25"
 
 
 [tool.poetry.group.dev.dependencies]
