--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ strict = true
 ignore_missing_imports = true
 python_version = "3.11"
 implicit_reexport = true
+disallow_untyped_calls = false
 
 [[tool.mypy.overrides]]
 module = "tests.*"
