--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ torchvision = "^0.17.0"
 rootutils = "^1.0.7"
 bottle = "^0.12.25"
 webtest = "^3.0.0"
+hydra-core = "^1.3.2"
+hydra-colorlog = "^1.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
