--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pytest-slow = "^0.0.3"
 pytest-mock = "^3.12.0"
 mypy = "^1.8.0"
 types-pyyaml = "^6.0.12.12"
+requests = "^2.31.0"
 
 [build-system]
 requires = ["poetry-core"]
