--- a/configs/launch.yaml
+++ b/configs/launch.yaml
@@ -4,12 +4,17 @@
 # order of defaults determines the order in which configs override each other
 defaults:
   - _self_
+  - interaction: default
+  - data_collectors: image
+  - models: image_vae
+  - trainers: image_vae
+  - threads: default
 
+  - devices: cuda
   - paths: default
   - hydra: default
 
   # experiment configs allow for version control of specific hyperparameters
-  # e.g. best hyperparameters for given model and datamodule
   - experiment: null
 
-task_name: image-encoding
+task_name: image_encoding
