--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ ignore_missing_imports = true
 python_version = "3.11"
 implicit_reexport = true
 disallow_untyped_calls = false
+disable_error_code = "no-any-return"
 
 [[tool.mypy.overrides]]
 module = "tests.*"
