--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ bottle = "^0.12.25"
 webtest = "^3.0.0"
 hydra-core = "^1.3.2"
 hydra-colorlog = "^1.2.0"
+vrchat-io = {git = "https://github.com/Geson-anko/vrchat-io.git", rev = "main"}
 
 
 [tool.poetry.group.dev.dependencies]
