--- a/configs/experiment/vrchat_vae_sconv_discrete_ppo.yaml
+++ b/configs/experiment/vrchat_vae_sconv_discrete_ppo.yaml
@@ -1,9 +1,9 @@
 # @package _global_
 
 defaults:
-  override /interaction: vrchat_with_curiosity_image_ppo_agent
-  override /model: image_vae_sconv_discrete_ppo
-  override /data_collectors: image_dynamics_ppo
-  override /trainers: image_vae_forward_dynamics_ppo
+  - override /interaction: vrchat_with_curiosity_image_ppo_agent
+  - override /models: image_vae_sconv_discrete_ppo
+  - override /data_collectors: image_dynamics_ppo
+  - override /trainers: image_vae_forward_dynamics_ppo
 
 task_name: vrchat_vae_sconv_discrete_ppo
