--- a/configs/data_collectors/image_dynamics_ppo.yaml
+++ b/configs/data_collectors/image_dynamics_ppo.yaml
@@ -9,10 +9,11 @@ forward_dynamics_trajectory:
   max_len: 2048
   key_list:
     - "observation"
+    - "hidden"
     - "action"
 
 ppo_trajectory:
   _target_: ami.data.buffers.ppo_trajectory_buffer.PPOTrajectoryBuffer.reconstructable_init
-  max_len: 128 # From PrimitiveAMI
+  max_len: ${python.eval:128+1} # From PrimitiveAMI, 
   gamma: 0.99
   gae_lambda: 0.95
