--- a/configs/trainers/image_vae_forward_dynamics_ppo.yaml
+++ b/configs/trainers/image_vae_forward_dynamics_ppo.yaml
@@ -17,8 +17,9 @@
   partial_dataloader:
     _target_: torch.utils.data.DataLoader
     _partial_: true
-    batch_size: 8
+    batch_size: ${python.eval:8+1} # To generate future target data.
     shuffle: false
+    drop_last: true # To avoid zero length tensor
   partial_optimizer:
     _target_: torch.optim.Adam
     _partial_: true
@@ -42,4 +43,4 @@
     betas: [0.9, 0.999]
   device: ${devices.0}
   max_epochs: 3
-  minimum_dataset_size: ${data_collectors.ppo_trajectory.max_len}
+  minimum_dataset_size: ${python.eval:"int('${data_collectors.ppo_trajectory.max_len}') - 1"}
