--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ webtest = "^3.0.0"
 hydra-core = "^1.3.2"
 hydra-colorlog = "^1.2.0"
 vrchat-io = {git = "https://github.com/Geson-anko/vrchat-io.git", rev = "main"}
+tensorboard = "^2.16.2"
 
 
 [tool.poetry.group.dev.dependencies]
