Add type annotation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest-mock = "^3.12.0"
 mypy = "^1.8.0"
 types-pyyaml = "^6.0.12.12"
 requests = "^2.31.0"
+types-requests = "^2.31.0.20240406"
 
 [build-system]
 requires = ["poetry-core"]
