--- a/configs/trainers/image_vae.yaml
+++ b/configs/trainers/image_vae.yaml
@@ -9,5 +9,9 @@
     _partial_: true
     lr: 0.001
   device: ${devices.0}
+  logger:
+    _target_: ami.tensorboard_loggers.StepIntervalLogger
+    log_dir: ${paths.log_dir}/tensorboard
+    log_every_n_steps: 1
   max_epochs: 3
   minimum_dataset_size: ${.partial_dataloader.batch_size}
