--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ mypy = "^1.8.0"
 types-pyyaml = "^6.0.12.12"
 requests = "^2.31.0"
 types-requests = "^2.31.0.20240406"
+freezegun = "^1.4.0"
 
 [build-system]
 requires = ["poetry-core"]
