--- a/configs/trainers/image_vae_forward_dynamics_ppo.yaml
+++ b/configs/trainers/image_vae_forward_dynamics_ppo.yaml
@@ -9,6 +9,10 @@
     _partial_: true
     lr: 1e-4
     betas: [0.9, 0.999]
+  logger:
+    _target_: ami.tensorboard_loggers.StepIntervalLogger
+    log_dir: ${paths.tensorboard_dir}/image_vae
+    log_every_n_steps: 1
   device: ${devices.0}
   max_epochs: 3
   minimum_dataset_size: ${.partial_dataloader.batch_size}
