--- a/configs/trainers/image_vae_forward_dynamics_ppo.yaml
+++ b/configs/trainers/image_vae_forward_dynamics_ppo.yaml
@@ -1,50 +1,4 @@
-- _target_: ami.trainers.image_vae_trainer.ImageVAETrainer
-  partial_dataloader:
-    _target_: torch.utils.data.DataLoader
-    _partial_: true
-    batch_size: 8
-    shuffle: true
-  partial_optimizer:
-    _target_: torch.optim.Adam
-    _partial_: true
-    lr: 1e-4
-    betas: [0.9, 0.999]
-  logger:
-    _target_: ami.tensorboard_loggers.StepIntervalLogger
-    log_dir: ${paths.tensorboard_dir}/image_vae
-    log_every_n_steps: 1
-  device: ${devices.0}
-  max_epochs: 3
-  minimum_dataset_size: ${.partial_dataloader.batch_size}
-
-- _target_: ami.trainers.forward_dynamics_trainer.ForwardDynamicsTrainer
-  partial_dataloader:
-    _target_: torch.utils.data.DataLoader
-    _partial_: true
-    batch_size: ${python.eval:8+1} # To generate future target data.
-    shuffle: false
-    drop_last: true # To avoid zero length tensor
-  partial_optimizer:
-    _target_: torch.optim.Adam
-    _partial_: true
-    lr: 1e-4
-    betas: [0.9, 0.999]
-  observation_encoder_name: image_encoder
-  device: ${devices.0}
-  max_epochs: 3
-  minimum_dataset_size: ${.partial_dataloader.batch_size}
-
-- _target_: ami.trainers.ppo_policy_trainer.PPOPolicyTrainer
-  partial_dataloader:
-    _target_: torch.utils.data.DataLoader
-    _partial_: true
-    batch_size: 8
-    shuffle: true
-  partial_optimizer:
-    _target_: torch.optim.Adam
-    _partial_: true
-    lr: 1e-4
-    betas: [0.9, 0.999]
-  device: ${devices.0}
-  max_epochs: 3
-  minimum_dataset_size: ${python.eval:"int('${data_collectors.ppo_trajectory.max_len}') - 1"}
+defaults:
+  - image_vae: default
+  - forward_dynamics: default
+  - ppo: default
