--- a/configs/trainers/forward_dynamics/default.yaml
+++ b/configs/trainers/forward_dynamics/default.yaml
@@ -13,6 +13,11 @@ partial_optimizer:
   lr: 1e-4
   betas: [0.9, 0.999]
 
+logger:
+  _target_: ami.tensorboard_loggers.StepIntervalLogger
+  log_dir: ${paths.tensorboard_dir}/forward_dynamics
+  log_every_n_steps: 1
+
 observation_encoder_name: image_encoder
 device: ${devices.0}
 max_epochs: 3
