--- a/configs/trainers/ppo/default.yaml
+++ b/configs/trainers/ppo/default.yaml
@@ -12,6 +12,11 @@ partial_optimizer:
   lr: 1e-4
   betas: [0.9, 0.999]
 
+logger:
+  _target_: ami.tensorboard_loggers.StepIntervalLogger
+  log_dir: ${paths.tensorboard_dir}/ppo_policy
+  log_every_n_steps: 1
+
 device: ${devices.0}
 max_epochs: 3
 minimum_dataset_size: ${python.eval:"int('${data_collectors.ppo_trajectory.max_len}') - 1"}
