--- a/configs/interaction/agent/curiosity_image_ppo.yaml
+++ b/configs/interaction/agent/curiosity_image_ppo.yaml
@@ -11,3 +11,8 @@ logger:
   _target_: ami.tensorboard_loggers.TimeIntervalLogger
   log_dir: ${paths.tensorboard_dir}/agent
   log_every_n_seconds: 0
+
+reward:
+  _target_: ami.interactions.agents.curiosity_image_ppo_agent.PredictionErrorReward
+  scale: 0.001
+  shift: 0.0
