--- a/configs/checkpointing/default.yaml
+++ b/configs/checkpointing/default.yaml
@@ -1,3 +1,8 @@
-_target_: ami.checkpointing.checkpointing.Checkpointing
+_target_: ami.checkpointing.checkpoint_schedulers.FixedTimeIntervalCheckpointScheduler
 
-checkpoints_dir: ${paths.checkpoints_dir}
+checkpointing:
+  _target_: ami.checkpointing.checkpointing.Checkpointing
+
+  checkpoints_dir: ${paths.checkpoints_dir}
+
+interval: 600.0 # 10 min.
