log_levelをlaunch.py直下から指定できるように修正

--- a/configs/hydra/default.yaml
+++ b/configs/hydra/default.yaml
@@ -17,7 +17,7 @@ sweep:
 job_logging:
   root:
     handlers: [root_console, root_file]
-    level: INFO
+    level: ${log_level}
 
   loggers:
     main:
