--- a/configs/launch.yaml
+++ b/configs/launch.yaml
@@ -22,3 +22,6 @@ task_name: image_encoding
 
 # You can specify saved checkpoint path when system is begun.
 saved_checkpoint_path: null
+
+# You can specify `hydra.job_logging.root.level`
+log_level: INFO
