学習を実行する最小新規データ数の判定を追加

--- a/configs/trainers/image_vae/default.yaml
+++ b/configs/trainers/image_vae/default.yaml
@@ -20,3 +20,4 @@ kl_coef: 0.01
 device: ${devices.0}
 max_epochs: 3
 minimum_dataset_size: ${.partial_dataloader.batch_size}
+minimum_new_data_count: 128 # From primitive ami.
