Forward Dynamics Trainerにminimum_new_data_countを追加

--- a/configs/trainers/forward_dynamics/default.yaml
+++ b/configs/trainers/forward_dynamics/default.yaml
@@ -22,3 +22,4 @@ observation_encoder_name: image_encoder
 device: ${devices.0}
 max_epochs: 3
 minimum_dataset_size: ${.partial_dataloader.batch_size}
+minimum_new_data_count: 128 # From primitive AMI
