--- a/configs/trainers/ppo/default.yaml
+++ b/configs/trainers/ppo/default.yaml
@@ -19,4 +19,4 @@ logger:
 
 device: ${devices.0}
 max_epochs: 3
-minimum_dataset_size: ${python.eval:"int('${data_collectors.ppo_trajectory.max_len}') - 1"}
+minimum_dataset_size: ${python.eval:"${data_collectors.ppo_trajectory.max_len} - 1"}
