デフォルト起動設定を更新

--- a/configs/launch.yaml
+++ b/configs/launch.yaml
@@ -4,6 +4,7 @@
 # order of defaults determines the order in which configs override each other
 defaults:
   - _self_
+
   - interaction: default
   - data_collectors: image
   - models: image_vae
@@ -17,6 +18,9 @@ defaults:
 
   # experiment configs allow for version control of specific hyperparameters
   - experiment: null
+
+  # You can specify configuration values that are shared among all config files.
+  - shared: default
 
 task_name: image_encoding
 
