--- a/configs/interaction/environment/dummy_image_io.yaml
+++ b/configs/interaction/environment/dummy_image_io.yaml
@@ -3,7 +3,10 @@ observation_generator:
   _target_: ami.interactions.environments.dummy_environment.SameObservationGenerator
   observation:
     _target_: torch.zeros
-    _args_: [3, 84, 84] # channels, height, width.
+    _args_:
+      - ${shared.image_channels}
+      - ${shared.image_height}
+      - ${shared.image_width}
 
 action_checker:
   _target_: ami.interactions.environments.dummy_environment.ActionTypeChecker
