--- a/configs/paths/default.yaml
+++ b/configs/paths/default.yaml
@@ -19,3 +19,6 @@ work_dir: ${hydra:runtime.cwd}
 
 # path to the checkpoints directory.
 checkpoints_dir: ${.output_dir}/checkpoints
+
+# path to the ami input/output (observation/action) logging directory
+io_log_dir: ${.output_dir}/io
