--- a/configs/trainers/image_vae/default.yaml
+++ b/configs/trainers/image_vae/default.yaml
@@ -5,6 +5,7 @@ partial_dataloader:
   _partial_: true
   batch_size: 8
   shuffle: true
+  drop_last: true # for batchnorm.
 
 partial_optimizer:
   _target_: torch.optim.Adam
