--- a/configs/experiment/world_models.yaml
+++ b/configs/experiment/world_models.yaml
@@ -13,5 +13,13 @@ interaction:
 data_collectors:
   ppo_trajectory:
     use_embed_obs_as_observation: True
+  forward_dynamics_trajectory:
+    max_len: ${python.eval:"(128 + 1) * 16"} # batch_size * 16
+
+trainers:
+  forward_dynamics:
+    partial_dataloader:
+      batch_size: ${python.eval:128+1}
+    minimum_new_data_count: ${.partial_dataloader.batch_size}
 
 task_name: world_models
