--- a/configs/experiment/world_models_sioconv.yaml
+++ b/configs/experiment/world_models_sioconv.yaml
@@ -2,7 +2,7 @@
 
 defaults:
   - override /interaction: vrchat_with_curiosity_image_ppo_agent
-  - override /models: world_models_sconv2
+  - override /models: world_models_sioconv
   - override /data_collectors: image_dynamics_ppo
   - override /trainers: image_vae_forward_dynamics_ppo
 
