--- a/configs/interaction/environment/vrchat_image_discrete.yaml
+++ b/configs/interaction/environment/vrchat_image_discrete.yaml
@@ -15,6 +15,12 @@ sensor:
   frame_rate: ${python.eval:"1 / ${interaction.interval_adjustor.interval}"}
 
 actuator:
-  _target_: ami.interactions.environments.actuators.vrchat_osc_discrete_actuator.VRChatOSCDiscreteActuator
-  osc_address: "127.0.0.1"
-  osc_sender_port: 9000
+  _target_: ami.interactions.environments.actuators.tensor_action_hdf5_recorder.TensorActionHDF5Recorder
+  actuator:
+    _target_: ami.interactions.environments.actuators.vrchat_osc_discrete_actuator.VRChatOSCDiscreteActuator
+    osc_address: "127.0.0.1"
+    osc_sender_port: 9000
+
+  file_path: ${paths.io_log_dir}/osc_discrete_actuator.h5
+  flush_batch_size: 1000
+  recording_dtype: ${torch.dtype:uint8}
