--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Geson Anko <X(Twitter)@GesonAnkoVR>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.10.1,<=3.10.12"
 torch = "^2.1.2"
 numpy = "^1.26.2"
 torchvision = "^0.17.0"
