OBSの設定ファイルを追加

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -84,4 +84,4 @@ repos:
     hooks:
       - id: codespell
         args:
-          - --skip=logs/**,data/**,*.ipynb
+          - --skip=logs/**,data/**,*.ipynb,obs_settings/**
