--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.10.1,<=3.10.12"
 torch = "^2.1.2"
-numpy = "^1.26.2"
+numpy = "^1.21.2"
 torchvision = "^0.17.0"
 rootutils = "^1.0.7"
 bottle = "^0.12.25"
@@ -19,6 +19,7 @@ vrchat-io = {git = "https://github.com/Geson-anko/vrchat-io.git", rev = "main"}
 tensorboard = "2.15.0"
 einops = "^0.8.0"
 h5py = "^3.11.0"
+mlagents-envs = {git = "https://github.com/MLShukai/ml-agents.git", subdirectory = "ml-agents-envs", rev = "develop"}
 
 
 [tool.poetry.group.dev.dependencies]
