環境のtimescaleを指定可能に

--- a/configs/interaction/default.yaml
+++ b/configs/interaction/default.yaml
@@ -1,9 +1,10 @@
 _target_: ami.interactions.fixed_interval_interaction.FixedIntervalInteraction
 
 defaults:
+  - _self_
   - agent: image_encoding
   - environment: dummy_image_io
 
 interval_adjustor:
   _target_: ami.interactions.interval_adjustors.SleepIntervalAdjustor
-  interval: 0.1 # 100 ms, 10 Hz.
+  interval: ${python.eval:"0.1 / ${time_scale}"} # 100 ms, 10 Hz.
