--- a/configs/launch.yaml
+++ b/configs/launch.yaml
@@ -29,3 +29,6 @@ saved_checkpoint_path: null
 
 # You can specify `hydra.job_logging.root.level`
 log_level: INFO
+
+# You can specify the time scale for the experiment.
+time_scale: 1.0
