Hydraの`multirun`を並列実行可能に

--- a/configs/hydra/default.yaml
+++ b/configs/hydra/default.yaml
@@ -6,6 +6,7 @@
 defaults:
   - override hydra_logging: colorlog
   - override job_logging: colorlog
+  - override launcher: joblib
 
 # output directory, generated dynamically on each run
 run:
@@ -56,3 +57,6 @@ job_logging:
       filename: ${hydra.runtime.output_dir}/inference.log
       when: D
       formatter: simple
+
+launcher:
+  n_jobs: ${python.eval:"${os.cpu_count:} // 4"}
