テストをverboseに。INFOまでログメッセージを表示

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Run pytest
         run: |
-          poetry run pytest
+          poetry run pytest -vv --log-level=INFO
 
       - name: Run mypy
         run: |
