trainerに温度パラメータを実装

--- a/configs/trainers/dreaming_policy_value/default.yaml
+++ b/configs/trainers/dreaming_policy_value/default.yaml
@@ -27,5 +27,6 @@ logger:
 device: ${devices.0}
 max_epochs: 1
 imagination_trajectory_length: 25
+imagination_temperature: 1.0
 minimum_dataset_size: ${.partial_dataloader.batch_size}
 minimum_new_data_count: ${.partial_dataloader.batch_size}
