configファイルを修正

--- a/configs/models/i_jepa.yaml
+++ b/configs/models/i_jepa.yaml
@@ -1,16 +1,27 @@
+image_encoder: i_jepa_target_encoder # Alias for ImageEncodingAgent.
+
 # Hyper params following set based on original I-JEPA's "vit_base"
-i_jepa_encoder:
+i_jepa_target_encoder:
   _target_: ami.models.model_wrapper.ModelWrapper
   default_device: ${devices.0}
   has_inference: True
   model:
     _target_: ami.models.i_jepa.IJEPAEncoder
-    img_size: 224
+    img_size:
+      - ${shared.image_height}
+      - ${shared.image_width}
+    in_channels: ${shared.image_channels}
     patch_size: 16
     embed_dim: 768
     depth: 12
     num_heads: 12
     mlp_ratio: 4.0
+
+i_jepa_context_encoder:
+  _target_: ami.models.model_wrapper.ModelWrapper
+  default_device: ${devices.0}
+  has_inference: False
+  model: ${..i_jepa_target_encoder.model}
 
 i_jepa_predictor:
   _target_: ami.models.model_wrapper.ModelWrapper
@@ -18,8 +29,10 @@ i_jepa_predictor:
   has_inference: False
   model:
     _target_: ami.models.i_jepa.IJEPAPredictor
-    n_patches: [14, 14]
-    context_encoder_embed_dim: 768
+    n_patches:
+      - ${python.eval:"${shared.image_height} // ${models.i_jepa_target_encoder.model.patch_size}"}
+      - ${python.eval:"${shared.image_width} // ${models.i_jepa_target_encoder.model.patch_size}"}
+    context_encoder_embed_dim: ${models.i_jepa_target_encoder.model.embed_dim}
     predictor_embed_dim: 384
     depth: 6
     num_heads: 12
