--- a/configs/trainers/i_jepa/default.yaml
+++ b/configs/trainers/i_jepa/default.yaml
@@ -1,4 +1,4 @@
-_target_: ami.trainers.image_vae_trainer.ImageVAETrainer
+_target_: ami.trainers.i_jepa_trainer.IJEPATrainer
 
 partial_dataloader:
   _target_: torch.utils.data.DataLoader
@@ -9,8 +9,10 @@ partial_dataloader:
   # based on the original paper settings
   collate_fn:
     _target_: ami.trainers.components.i_jepa_mask_collator.IJEPAMultiBlockMaskCollator
-    input_size: [224, 224]
-    patch_size: 16
+    input_size:
+      - ${shared.image_height}
+      - ${shared.image_width}
+    patch_size: ${models.i_jepa_target_encoder.model.patch_size}
     encoder_mask_scale: [0.85, 1.0]
     predictor_mask_scale: [0.15, 0.2]
     aspect_ratio: [0.75, 1.5]
@@ -30,7 +32,6 @@ logger:
   log_dir: ${paths.tensorboard_dir}/i_jepa
   log_every_n_steps: 1
 
-kl_coef: 0.01
 device: ${devices.0}
 max_epochs: 3
 minimum_dataset_size: ${.partial_dataloader.batch_size}
