--- a/configs/interaction/agent/curiosity_image_multi_step_imagination.yaml
+++ b/configs/interaction/agent/curiosity_image_multi_step_imagination.yaml
@@ -13,4 +13,9 @@ logger:
   log_dir: ${paths.tensorboard_dir}/agent
   log_every_n_seconds: 0
 
-max_imagination_steps: 10
+max_imagination_steps: 50
+
+reward_average_method:
+  _target_: ami.interactions.agents.multi_step_imagination_curiosity_agent.average_exponentially
+  _partial_: true
+  decay: ${python.eval:"1 - 1 / ${..max_imagination_steps}"}
