--- a/configs/interaction/environment/unity.yaml
+++ b/configs/interaction/environment/unity.yaml
@@ -1,6 +1,7 @@
 _target_: ami.interactions.environments.unity_environment.UnityEnvironment
 
 file_path: ???
+log_file_path: ???
 worker_id: 0
 
 time_scale: ${time_scale}
