観測正規化をMultiStepCuriosityにも追加

--- a/configs/experiment/dreamer_multi_step_imagination.yaml
+++ b/configs/experiment/dreamer_multi_step_imagination.yaml
@@ -8,6 +8,13 @@ defaults:
   - override /trainers: image_vae_forward_dynamics_dreaming
 
 interaction:
+  observation_wrappers:
+    - _target_: ami.interactions.io_wrappers.function_wrapper.FunctionIOWrapper
+      wrap_function:
+        _target_: ami.interactions.io_wrappers.function_wrapper.normalize_tensor
+        _partial_: True
+        eps: 1e-6
+
   action_wrappers:
     - _target_: ami.interactions.io_wrappers.function_wrapper.FunctionIOWrapper
       wrap_function:
