--- a/configs/threads/default.yaml
+++ b/configs/threads/default.yaml
@@ -1,6 +1,7 @@
 main_thread:
   _target_: ami.threads.main_thread.MainThread
   address: ["0.0.0.0", 8391]
+  max_uptime: ${python.eval:"float('${max_uptime}') / ${time_scale}"}
 
 inference_thread:
   _target_: ami.threads.inference_thread.InferenceThread
