--- a/configs/trainers/i_jepa_forward_dynamics_ppo_dreaming.yaml
+++ b/configs/trainers/i_jepa_forward_dynamics_ppo_dreaming.yaml
@@ -1,4 +1,4 @@
 defaults:
   - i_jepa: bool_mask
   - forward_dynamics: with_action_reward
-  - ppo_dreaming: default
+  - dreaming_policy_value: ppo
