--- a/configs/experiment/bool_mask_i_jepa_with_videos.yaml
+++ b/configs/experiment/bool_mask_i_jepa_with_videos.yaml
@@ -8,8 +8,8 @@ defaults:
 interaction:
   environment:
     observation_generator:
-      video_frames_per_videos: ${python.eval:"int(10 * ${cvt_time_str:4h})"} # 10FPS, 4時間分. 6本の動画で24時間分
-      folders:
+      folder_frame_limits: ${python.eval:"int(10 * ${cvt_time_str:4h})"} # 10FPS, 4時間分. 6本の動画で24時間分
+      folder_paths:
         - ${paths.data_dir}/random_observation_action_log/2024-08-26_12-55-45/io/video_recordings
         - ${paths.data_dir}/random_observation_action_log/2024-08-26_13-00-14/io/video_recordings
         - ${paths.data_dir}/random_observation_action_log/2024-08-26_13-04-15/io/video_recordings
