md format tableを追加

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -73,7 +73,7 @@ repos:
         args: ["--number"]
         additional_dependencies:
           - mdformat-gfm
-          # - mdformat-tables
+          - mdformat-tables
           - mdformat_frontmatter
           # - mdformat-toc
           # - mdformat-black
