--- a/configs/trainers/bool_mask_i_jepa.yaml
+++ b/configs/trainers/bool_mask_i_jepa.yaml
@@ -52,3 +52,58 @@ i_jepa_latent_visualization_target:
   max_epochs: ${trainers.i_jepa.max_epochs}
   minimum_dataset_size: ${.partial_dataloader.batch_size}
   minimum_new_data_count: ${trainers.i_jepa.minimum_new_data_count}
+
+defaults:
+  - i_jepa: bool_mask
+
+i_jepa_latent_visualization_context:
+  _target_: ami.trainers.i_jepa_latent_visualization_trainer.IJEPALatentVisualizationDecoderTrainer
+  decoder_name: i_jepa_context_visualization_decoder
+  partial_dataloader:
+    _target_: torch.utils.data.DataLoader
+    _partial_: true
+    batch_size: ${trainers.i_jepa.partial_dataloader.batch_size}
+    shuffle: true
+    drop_last: true
+
+  partial_optimizer:
+    _target_: torch.optim.AdamW
+    _partial_: true
+    lr: 0.0001
+    weight_decay: 0.01
+
+  logger:
+    _target_: ami.tensorboard_loggers.StepIntervalLogger
+    log_dir: ${paths.tensorboard_dir}/i_jepa_latent_visualization_context
+    log_every_n_steps: 1
+
+  device: ${devices.0}
+  max_epochs: ${trainers.i_jepa.max_epochs}
+  minimum_dataset_size: ${.partial_dataloader.batch_size}
+  minimum_new_data_count: ${trainers.i_jepa.minimum_new_data_count}
+
+i_jepa_latent_visualization_target:
+  _target_: ami.trainers.i_jepa_latent_visualization_trainer.IJEPALatentVisualizationDecoderTrainer
+  decoder_name: i_jepa_target_visualization_decoder
+  partial_dataloader:
+    _target_: torch.utils.data.DataLoader
+    _partial_: true
+    batch_size: ${trainers.i_jepa.partial_dataloader.batch_size}
+    shuffle: true
+    drop_last: true
+
+  partial_optimizer:
+    _target_: torch.optim.AdamW
+    _partial_: true
+    lr: 0.0001
+    weight_decay: 0.01
+
+  logger:
+    _target_: ami.tensorboard_loggers.StepIntervalLogger
+    log_dir: ${paths.tensorboard_dir}/i_jepa_latent_visualization_target
+    log_every_n_steps: 1
+
+  device: ${devices.0}
+  max_epochs: ${trainers.i_jepa.max_epochs}
+  minimum_dataset_size: ${.partial_dataloader.batch_size}
+  minimum_new_data_count: ${trainers.i_jepa.minimum_new_data_count}
