--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ python_version = "3.10"
 implicit_reexport = true
 disallow_untyped_calls = false
 disable_error_code = "no-any-return"
+disallow_subclassing_any = false
 
 [[tool.mypy.overrides]]
 module = "tests.*"
