--- a/configs/experiment/learn_only_sioconv.yaml
+++ b/configs/experiment/learn_only_sioconv.yaml
@@ -66,7 +66,7 @@ models:
 
 data_collectors:
   forward_dynamics_trajectory:
-    max_len: ${python.eval:"20 * ${trainers.forward_dynamics.partial_dataloader.batch_size}"}
+    max_len: ${python.eval:"${trainers.forward_dynamics.partial_sampler.max_samples} * ${trainers.forward_dynamics.partial_sampler.sequence_length}"}
     key_list:
       - "embed_observation" # 学習済Observation Encoderの出力を使う
       - "hidden"
@@ -77,8 +77,9 @@ trainers:
   forward_dynamics:
     observation_encoder_name: null # embed observationを直接使う
     max_epochs: 1
-    partial_dataloader:
-      batch_size: ${python.eval:"256 + 1"} # 学習する系列長. +1することでバッチから1ステップ先の予測対象データを抜き出す。
+    partial_sampler:
+      sequence_length: ${python.eval:"256 + 1"} # +1 to generate future target data.
+      max_samples: 20 # Iteraction count.
     minimum_new_data_count: 128
 
 task_name: "learn_only_sioconv_large"
